src/index.css
@font-face {
  font-family: "Aeonik";
  src: url("./assets/fonts/Aeonik/fonnts.com-Aeonik-Regular.ttf")
    format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Aeonik";
  src: url("./assets/fonts/Aeonik/fonnts.com-Aeonik-Bold.ttf")
    format("truetype");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "IBM";
  src: url("./assets/fonts/IbmPlexMono/IBMPlexMono-Regular.ttf")
    format("truetype");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "IBM";
  src: url("./assets/fonts/IbmPlexMono/IBMPlexMono-SemiBold.ttf")
    format("truetype");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

@import "tailwindcss";

@theme {
  /* breakpoints */
  --breakpoint-xs: 480px;
  /* fonts */
  --font-ibm: "IBM";
  --font-aeonik: "Aeonik";
  /* colors */
  --color-background: #efefef;
  --color-red: #ff0000;
  --color-teal: #00858f;
  --color-dark-green: #186167;
  --color-light-blue: #d4fcff;
  --color-light-gray: #93939e;
}

* {
  font-family: "Aeonik", sans-serif;
}

body {
  background-color: var(--color-background);
}

/* spacing */
.my-container {
  @apply w-full xl:mx-auto xl:max-w-[1280px] 2xl:max-w-[1526px];
}

.side-padding {
  @apply px-3 xs:px-5 md:px-10;
}
.side-margin {
  @apply mx-3 xs:mx-5 md:mx-10;
}

/* backgrounds and gradients */
.bg-dark-green-blue-gradient {
  @apply bg-[linear-gradient(90deg,#024045_0%,#6C9ABD_50%,#001959_100%)];
}
.bg-dark-green-blue-gradient-vertical {
  @apply bg-[linear-gradient(180deg,#024045_0%,#6C9ABD_50%,#001959_100%)];
}
.bg-dark-green-blue-gradient-oblique {
  @apply bg-[linear-gradient(-45deg,#024045_0%,#6C9ABD_50%,#001959_100%)];
}

.bg-linear-white-transparent-50 {
  background-image: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0.1) 0%,
    rgba(255, 255, 255, 0.5) 100%
  );
}

.bg-linear-white-transparent-70 {
  background-image: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0.1) 0%,
    rgba(255, 255, 255, 0.7) 100%
  );
}

.bg-gold-gradient {
  @apply bg-[linear-gradient(350deg,#36381C_0%,#96A893_30%,#2D2A23_100%)];
}

.bg-button {
  background-image: linear-gradient(
    120deg,
    rgba(255, 255, 255, 0.1) 0%,
    rgba(255, 255, 255, 0.5) 100%
  );
  position: relative;
}

.bg-button::before {
  content: "";
  position: absolute;
  inset: 0;
  background: url("/noisy-bg.webp");
  background-size: cover;
  opacity: 0.2; /* 20% */
  z-index: 0;
}

/* text */
.text-16 {
  @apply text-[15px] leading-[18px] xs:text-[16px] xs:leading-[21px];
}

.text-25 {
  @apply text-[23px] leading-[27px] xs:text-[25px] xs:leading-[31px];
}

